Creacion de opciones dentro de inventario InventarioOpciones.kt, implemente el registro InventarioEntregas.kt y el de InventarioEntregas2.kt y para entrega, deshabilite el boton back para el activity InventarioCompletado.kt. Hice el layout de almacen_layout.xml y la clase Almacenes.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BAMXapp">
         <activity
+            android:name=".InventarioEntregas2"
+            android:exported="true"
+            android:theme="@style/Theme.Design.NoActionBar"/>
+        <activity
+            android:name=".InventarioEntregas"
+            android:exported="true"
+            android:theme="@style/Theme.Design.NoActionBar"/>
+        <activity
+            android:name=".InventarioOpciones"
+            android:exported="true"
+            android:theme="@style/Theme.Design.NoActionBar"/>
+        <activity
             android:name=".EntregasInventario"
             android:exported="true"
             android:theme="@style/Theme.Design.NoActionBar"/>
