Agregué un boton de vehiculo y recoleccion en el main menu, tambien cree Vehiculo.kt, Recoleccion.kt y sus respectivos ativities. Tambien hice entrega_layout.xml, recoleccion_layout.xml, EntregaAdapter.kt Y RecoleccionAdapter.kt. Esto para visualizar las list view de entregas y recolecciones de forma separada y ordenada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCJI21MhiubzPS76LyTTHR0yAOaYGmKcLc"/>
         <activity
+            android:name=".Recolecciones"
+            android:exported="true"
+            android:theme="@style/Theme.Design.NoActionBar" />
+        <activity
+            android:name=".Vehiculo"
+            android:exported="true"
+            android:theme="@style/Theme.Design.NoActionBar" />
+        <activity
             android:name=".Rutas"
             android:exported="true"
             android:theme="@style/Theme.Design.NoActionBar"/>
