--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="${GOOGLE_MAPS_API_KEY}"/>
         <activity
+            android:name=".LoadingScreen"
+            android:exported="true"
+            android:theme="@style/Theme.Design.NoActionBar" />
+        <activity
             android:name=".Recolecciones"
             android:exported="true"
             android:theme="@style/Theme.Design.NoActionBar" />
@@ -79,6 +83,10 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Design.NoActionBar"/>
+        <activity
+            android:name=".SplashScreen"
             android:exported="true"
             android:theme="@style/Theme.Design.NoActionBar">
             <intent-filter>
